sumo/tests/netconvert/errors/errors/broken_edge/edge#nolanes__empty4/errors.netconvert
Error: Empty lane number definition in edge '4'.
Quitting (on error).
